# netis

./: package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  n2n.rs  platform.rs  utils.rs
src-tauri/src/platform/linux/: init.rs
src-tauri/src/platform/macos/: init.rs
src-tauri/src/platform/windows/: init.rs
src/components/: Greet.vue
